add image to background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2745,7 +2745,7 @@ input, select, textarea {
 				}
 
 				ul.pagination li > .page.active {
-					background-color: #6ba47e;
+					background-color: #4c5c96;
 				}
 
 			ul.pagination li:first-child {
